--- a/Home.html
+++ b/Home.html
@@ -9,22 +9,37 @@
   <nav>
     <div class="menu">
       <div class="logo">
-        <a href="#">Online Book Store</a>
+        <a href="#">BOOKSPIE</a>
       </div>
+<form id="form">
+<input type="search" id="query" name="q" placeholder="Search.... ">
+</form>
       <ul>
         <li><a href="Home.html">Home</a></li>
-        <li><a href="Admin.html">Admin</a></li>
-        <li><a href="Registration1.html">Seller</a></li>
+        <li><a href="Admin.html">Login</a></li>
+        <li><a href="Registration1.html">Register</a></li>
         <li><a href="#">Buyer</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
   </nav>
+
 <div class="text-box">
-<h1>Welcome to Our Online Book Store</h1><br><h3>
-<p>Buy books online at Best prices.Shop today for best details</p></h3>
+<h1>Welcome to Online Book Store</h1><br><h3>
+<p>Buy books online at Best prices.Shop today for best details</p></h3><br>
+  <center> <button type="submit"><a style="text-decoration:none"; href="login.html"><b>Check Out the books</b></a></button></br></center>
+    
 </div>
 </section>
+
+
+
+
+
+
+
+
+
 </body>
 </html>
